--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
-@import url(http://fonts.googleapis.com/css?family=Open+Sans:800);
-@import url(http://fonts.googleapis.com/css?family=Great+Vibes);
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:800);
+@import url(https://fonts.googleapis.com/css?family=Great+Vibes);
 
 body {
 	background: url("pics/generic1.jpg");
